# meteocatsapi

./: .env.example  .gitignore  Dockerfile  Dockerfilevue  README.md  docker-compose.yml  main.py
backend/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: __main__.py  main.py  settings.py
backend/app/models/: suggestion_models.py  weather_models.py
backend/app/routes/: suggestion_routes.py  weather_routes.py
backend/app/utils/: base.json  suggustion_utils.py  weather_utils.py
frontend/: Dockerfile  docker-compose.yml
frontend/forecastapi/: Dockerfile  Dockerfilevue  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/forecastapi/src/: App.vue
frontend/forecastapi/src/components/: WeatherSearch.vue
