[tool.poetry]
name = "app"
version = "0.1.0"
description = "MeteoCatsAPI"
authors = [
    "sergey <risefenixpuryfire@gmail.com>"
]
readme = "README.md"
[tool.poetry.dependencies]
python = ">=3.12"
fastapi = { version = "^0.115.12", extras = ["core"] }
pydantic = "^2.11.5"
pydantic-settings = "^2.9.1"
uvicorn = "^0.34.2"
requests = "^2.32.3"
requests-cache = "^1.2.1"
retry-requests = "^2.0.0"
numpy = "^2.2.6"
pandas = "^2.2.3"
openmeteo-requests = "^1.5.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

